2010-06-01  Rob Buis  <rwlbuis@gmail.com>

Reviewed by Dirk Schulze.

        Manipulating SVG element attributes in Javascript does not work as expected
        https://bugs.webkit.org/show_bug.cgi?id=34328

        Reset the viewBox to be empty when removing the viewBox attribute.

        Test: svg/custom/svg-viewBox-dynamic.html

Canonical link: https://commits.webkit.org/51538@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60501 268f45cc-cd09-0410-ab3c-d52691b4dbfc